<resources>
    <string name="app_name">Agenda Timer</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="text_item_count">Open items to plan:</string>
    <plurals name="countdown_header_text">
        <item quantity="one">We have %d open item\nto address by %s.</item>
        <item quantity="other">We have %d open items\nto address by %s.</item>
    </plurals>
    <string name="button_text_start">Start</string>
    <string name="tasks_complete_toast">Congratulations! You have finished all tasks!</string>
    <string name="button_start_over">Start Over</string>
    <string name="button_reset_item">Reset Item</string>
    <string name="button_1_down">1 Down</string>
    <string name="text_deadline">End of meeting:</string>
    <string name="hint_item_count">10</string>
    <string name="total_time_remaining_header">In order to finish in:</string>
    <string name="item_time_remaining_header">We must move on to the next item in:</string>

    <string name="zero_time">0:00:00</string>
    <string name="time_format">%d:%02d:%02d</string>
    <string name="time_of_day_format_24_hour">%d:%02d</string>
    <string name="time_of_day_format_12_hour">%d:%02d %s</string>
    <string name="time_of_day_format_am">AM</string>
    <string name="time_of_day_format_pm">PM</string>
</resources>